# zenduty-python-sdk

./: pyproject.toml  setup.py
zenduty/apiV2/: client.py
