[tool.poetry]
name = "zenduty-python-sdk"
version = "1.0.0"
description = ""
authors = ["Daniel Rosado <daniel.rosado@quantohm.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.32.3"
urllib3 = ">=2.2.2"
six = ">=1.16.0"
charset-normalizer = ">=3.4.0"
idna = ">=3.10"
certifi = ">=2024.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
